// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Marker Combination Of Avatar 1`] = `
<div
  className="box-border flex p-1 pr-4 items-center rounded-full ease-out transition-shadow shadow hover:shadow-lg"
  style={
    Object {
      "backgroundColor": "black",
      "borderColor": "transparent",
      "borderWidth": 0,
      "color": "#ffffff",
      "width": "auto",
    }
  }
>
  <div
    className="h-10 w-10 overflow-hidden rounded-full bg-coolGray-200 dark:bg-trueGray-800 border border-coolGray-300 dark:border-trueGray-700"
  >
    <img
      alt="avatar"
      src="https://source.unsplash.com/random"
    />
  </div>
  <div>
    test
  </div>
</div>
`;

exports[`Storyshots Marker Default 1`] = `
<div
  className="box-border flex p-1 pr-4 items-center rounded-full ease-out transition-shadow shadow hover:shadow-lg"
  style={
    Object {
      "backgroundColor": "black",
      "borderColor": "transparent",
      "borderWidth": 0,
      "color": "#ffffff",
      "width": "auto",
    }
  }
>
  test
</div>
`;
